k8s/app/app.yml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: passport-app
  template:
    metadata:
      labels:
        app: passport-app
    spec:
      containers:
        - name: passport-service
          image: denisviskov/passport-service:latest
          ports:
            - containerPort: 9090
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 10
            periodSeconds: 5
          resources:
            requests:
              cpu: "200m"
              memory: "512Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: passport-app
spec:
  selector:
    app: passport-app
  ports:
    - port: 80
      targetPort: 9090
  type: ClusterIP
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-app
                port:
                  number: 80
